Playlist dropdown menu overflow issue has been fixed

--- a/Web.Upnp.Control/ClientApp/src/styles/_dropdown.scss
+++ b/Web.Upnp.Control/ClientApp/src/styles/_dropdown.scss
@@ -7,13 +7,6 @@
     }
 }
 
-.dropdown-menu {
-    max-height: 100vh;
-    max-width: 100vh;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
-
 @media (pointer: coarse) {
     .dropdown-item {
         padding-block: map-get($spacers, 3);
